change db config

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=0S-ZcoU0t5Gp3oetbnsah9MSOqRnL1t2
 DRIVE_DISK=local
+DB_CONNECTION=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
