twitter auth and native auth

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DRIVE_DISK=local
 DB_CONNECTION=mysql
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
+TWITTER_CLIENT_ID=clientId
+TWITTER_CLIENT_SECRET=clientSecret
