--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ MYSQL_HOST=localhost
 MYSQL_PORT=3306
 TWITTER_CLIENT_ID=clientId
 TWITTER_CLIENT_SECRET=clientSecret
+GITHUB_CLIENT_ID=clientId
+GITHUB_CLIENT_SECRET=clientSecret
+TOKEN_EXPIRES_IN='1 hr'
